--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
-python-telegram-bot==22.4
-pg8000==1.31.2
-flask[async]==2.3.3
-gunicorn==22.0.0
-anyio==3.7.1
-asgiref==3.7.2
-gevent>=1.4
+Flask==2.0.1
+python-telegram-bot==20.0
+gunicorn==20.1.0
+gevent==21.8.0
+pg8000==1.29.4
+httpx==0.23.0
