--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-Flask==2.0.1
-python-telegram-bot==20.0
-gunicorn==20.1.0
-gevent==22.10.2
-pg8000==1.29.4
-httpx==0.23.0
+Flask==2.3.3
+python-telegram-bot==20.7
+gunicorn==21.2.0
+pg8000==1.30.3
+httpx==0.25.2
+sqlite3
